--- a/static/index.html
+++ b/static/index.html
@@ -1,36 +1,108 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Tractor Beam</title>
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-	<style>
-		.selectorBox, .urlBox {
-			width: 100%;
-			min-width: 200px;
-			max-width: 600px;
-			display: block;
-			margin-bottom: 5px;
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Image resizer for creating responsive images. By The Dallas Morning News.">
+    <meta name="author" content="Daniel Lathrop">
+    <title>The Tractor Beam web page element snapshotter</title>
+    <link rel="icon" type="image/png" href="/static/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/static/favicon-16x16.png" sizes="16x16" />
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <style>
+      body {
+        padding-top: 50px;
+      }
+      .starter-template {
+        padding: 40px 15px;
+        text-align: center;
+      }
+
+      .btn-shrinkray {
+        color: #fff;
+        background-color: #ED4422;
+
+      }
+
+      .container.tractorbeam {
+        max-width: 500px;
+      }
 
 
-		}
+    .tractorbeam .control-label {
+      margin-top: -2px;
+      padding-top: 0px;
+    }
 
-		article {
-			padding: 5px;
-		}
+    form input.box {
+        width: 100%;
+        margin-bottom: 5px;
+    }
+    </style>
+  </head>
+
+  <body>
+
+    <div class="container tractorbeam">
+      <div class="row">
+        <center>
+      <img src="/static/logo.png" style="margin: 5px; width: 95%; max-width: 500px; padding-bottom: 25px;">
+    </center>
+    </div>
+      <div class="row">
+
+        <form name="generateImage" action="/image" method="get">
+            <input class="urlBox box" name="url" placeholder="Enter a valid http or https URL">
+            <input  class="selectorBox box" class="" name="selector" 
+                placeholder="Enter a valid block-level CSS selector">
+            <button class="btn btn-tractorbeam" type="submit">Submit</button>
+        </form>
 
 
 
-	</style>
-</head>
-<body>
-	<article>
-		<h1>Tractor Beam</h1>
-		<h5>Generate images of a specific element on a web page. It chooses the first matching element</h5>
-		<form name="generateImage" action="/image" method="get">
-			<input class="urlBox" name="url" placeholder="Enter a valid http or https URL">
-			<input  class="selectorBox" class="" name="selector" placeholder="Enter a valid CSS selector">
-			<button type="submit">Submit</button>
-		</form>
-	</article>
-</body>
+
+        <hr>
+        <small>
+          &copy; Copyright 2015 by <a href="http://labs.dallasnews.com/">The Dallas Morning News</a><br>
+          Written by <a href="http://github.com/lathropd">Daniel Lathrop</a><br>
+          Logo by <a href="https://twitter.com/TroyOxford">Troy Oxford</a><br>
+        </small>
+      </div>
+
+    </div><!-- /.container -->
+
+
+
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- // <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
+    <script src="/static/jquery.playSound.js"></script>
+
+    <script>
+    $(document).ready(function() {
+
+      $(".btn-tractorbeam").click( function () {
+        $.playSound('/static/aciddeathray')
+
+
+      })
+
+
+    });
+    </script>
+
+
+  </body>
 </html>
