moved static images

--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,7 @@
     <div class="container tractorbeam">
       <div class="row">
         <center>
-      <img src="/static/logo.png" style="margin: 5px; width: 95%; max-width: 500px; padding-bottom: 25px;">
+      <img src="/static/tractorbeamlogo500.png" style="margin: 5px; width: 95%; max-width: 500px; padding-bottom: 25px;">
     </center>
     </div>
       <div class="row">
